<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".personal_info_activity"
    android:orientation="vertical">
    <include layout="@layout/normal_action_activity_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Personal_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#CDDC39"
            android:includeFontPadding="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/personal_info"
            android:textSize="14sp"
            app:backgroundTint="#D2807A7C"
            app:iconTint="#ED121111"
            android:onClick="MoveToPersonalInfoActivity"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/Educational_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#CDDC39"
            android:includeFontPadding="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/educational_info"
            android:textSize="14sp"
            app:backgroundTint="#D2807A7C"
            app:iconTint="#ED121111"
            android:onClick="MoveToEducationActivity"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/Skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10dp"
            android:background="#CDDC39"
            android:includeFontPadding="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="14dp"
            android:text="skills and Technology"
            android:textSize="14sp"
            app:backgroundTint="#D2807A7C"
            app:iconTint="#ED121111"
            android:onClick="MoveToSkillS_Technology"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/Coding_Lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#CDDC39"
            android:includeFontPadding="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/coding_languages"
            android:textSize="14sp"
            app:backgroundTint="#D2807A7C"
            app:iconTint="#ED121111"
            android:onClick="MoveToCoding_Language"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/Certification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#CDDC39"
            android:includeFontPadding="true"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="14dp"
            android:text="certification"
            android:textSize="14sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            app:backgroundTint="#D2807A7C"
            app:iconTint="#ED121111"
            android:paddingStart="5dp"
            android:onClick="MoveToCertification_Activity"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/Project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#CDDC39"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/project"
            android:textSize="14sp"
            app:backgroundTint="#D2807A7C"
            app:iconTint="#ED121111"
            android:onClick="MoveToProject_activity"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/Languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#CDDC39"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/languages"
            android:textSize="14sp"
            app:backgroundTint="#D2807A7C"
            app:iconTint="#ED121111"
            android:onClick="MoveToSpeaking_Language"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/createPDF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10dp"
            android:background="#CDDC39"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="14dp"
            android:text="Create PDF"
            android:textSize="14sp"
            app:backgroundTint="#8E24AA"
            app:iconTint="#ED121111"
            android:onClick="create_pdf_form"
            tools:ignore="OnClick" />
    </LinearLayout>
</LinearLayout>